Moved bookmarks widget from bottom to top in layout, fixed overflow bug for counts in AllListings.jsx

--- a/app/styles/_widget.scss
+++ b/app/styles/_widget.scss
@@ -124,6 +124,15 @@
                 display: table-row;
                 height: 0;
             }
+
+            .allListingsHr{
+                visibility: hidden;
+                position: relative;
+                width: 100%;
+                margin: 0px;
+                margin-bottom: -10px;
+                padding: 0px;
+            }
         }
     }
 
